deployment/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shortener-api
  namespace: shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shortener-api
  template:
    metadata:
      labels:
        app: shortener-api
    spec:
      containers:
        - name: shortener-api
          image: ghcr.io/naichinger/url-shortener-api:latest
          ports:
            - containerPort: 8080
