deployment/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: shortener-api-svc
  namespace: shortener
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: shortener-api
