deployment/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: shortener-frontend-svc
  namespace: shortener
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: shortener-frontend
