deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shortener-ingress-1
  namespace: shortener
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "2"
    cert-manager.io/cluster-issuer: "cluster-issuer-letsencrypt"
spec:
  tls:
    - hosts:
        - shrt.k3s.naichinger.com
      secretName: tls-shrt-ingress-dns
  rules:
    - host: shrt.k3s.naichinger.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: shortener-frontend-svc
                port:
                  number: 80
          - path: /favicon.ico
            pathType: Exact
            backend:
              service:
                name: shortener-frontend-svc
                port:
                  number: 80
          - path: /main-{[A-Z0-9]{8}}.js
            pathType: Exact
            backend:
              service:
                name: shortener-frontend-svc
                port:
                  number: 80
          - path: /polyfills-{[A-Z0-9]{8}}.js
            pathType: Exact
            backend:
              service:
                name: shortener-frontend-svc
                port:
                  number: 80
          - path: /styles-{[A-Z0-9]{8}}.css
            pathType: Exact
            backend:
              service:
                name: shortener-frontend-svc
                port:
                  number: 80
          - path: /stats
            pathType: Exact
            backend:
              service:
                name: shortener-frontend-svc
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shortener-ingress-2
  namespace: shortener
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "1"
    cert-manager.io/cluster-issuer: "cluster-issuer-letsencrypt"
spec:
  tls:
    - hosts:
        - shrt.k3s.naichinger.com
      secretName: tls-shrt-ingress-dns
  rules:
    - host: shrt.k3s.naichinger.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shortener-api-svc
                port:
                  number: 80
